--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node-server for quickWrite",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/Caozefu/quickWrite-NodeServer#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "co-mysql": "^1.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "mysql": "^2.17.1"
   }
 }
